--- a/main.html
+++ b/main.html
@@ -10,7 +10,17 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<header role="heading"><h1>Prashid Pal</h1></header>
+	<img src="Image_one" role="img"><br>
+	<a href="https://www.linkedin.com/in/prashid-pal-1560541a7/" role="button">Linkdeln Page</a>
+	<br><br>
+	<section id="skills">Skill1 Skill2 Skill3</section><br>
+	<section id="projects">
+		<ul role="list">
+			<li role="listitem">Project1</li>
+			<li role="listitem">Project2</li>
+			<li role="listitem">Project3</li>
+		</ul>
 </body>
 
 </html>
