--- a/main.html
+++ b/main.html
@@ -10,7 +10,8 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-<header role="heading"><h1>Prashid Pal</h1></header>
+<header><h1 role="heading">Prashid Pal</h1></header>
+	<nav role="navigation">
 	<img src="Image_one" role="img"><br>
 	<a href="https://www.linkedin.com/in/prashid-pal-1560541a7/" role="button">Linkdeln Page</a>
 	<br><br>
@@ -21,6 +22,7 @@
 			<li role="listitem">Project2</li>
 			<li role="listitem">Project3</li>
 		</ul>
+	</nav>
 </body>
 
 </html>
